grub2 (2.02~beta2-29) UNRELEASED; urgency=medium

  [ Ian Campbell ]
  * Support postrm_purge_boot_grub debconf question for grub-* not just grub-pc
    (Closes: #782156)

 -- Ian Campbell <ijc@debian.org>  Sun, 06 Sep 2015 10:48:13 +0100

grub2 (2.02~beta2-28) unstable; urgency=medium

  * Reduce the CFLAGS -O3 default on Ubuntu ppc64el to -O2; it introduces
    various -Werror failures and isn't worth it here.

 -- Colin Watson <cjwatson@debian.org>  Sun, 06 Sep 2015 01:25:56 +0100

grub2 (2.02~beta2-27) unstable; urgency=medium

  [ Felix Zielcke ]
  * Remove Robert Millan from Uploaders with his permission. Thanks for
    all the work he did for GRUB 2!
  * Stop forcing gcc-4.9 for building.
  * Update to Policy 3.9.6.
  * Update the Browser URL for our git repository.
  * Use dpkg-buildflags at least for the host binaries.
  * Simplify Build-Depends.

  [ Colin Watson ]
  * Go back to forcing a particular compiler version, but this time gcc-5.
    The reason for this is that new compiler versions often make slight
    changes to the size of compiled code which break delicate parts of GRUB,
    and we want to make sure that we test newer versions before switching to
    them.
  * Make builds that are not limited to architecture-dependent packages
    (i.e. dpkg-buildpackage -b) work on non-x86 architectures (closes:
    #744954).

  [ Mathieu Trudel-Lapierre ]
  * debian/build-efi-images: Look for grub.cfg in $cmdpath too in
    gcdx64.efi, to simplify embedded scenarios: putting a grub.cfg snippet
    that loads the right "real" grub.cfg can be useful. (LP: #1468111)
  * debian/patches/uefi_firmware_setup.patch: Take into account that the
    UEFI variable OsIndicationsSupported is a bit field, and as such should
    be compared as hex values in 30_uefi-firmware.in. (LP: #1456911)
  * Update quick boot logic to handle abstractions for which there is no
    write support. (LP: #1274320)

  [ dann frazier ]